--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
         let lastResult = '';
         let lastSpokenInstruction = '';
         //let apiUrl = 'https://3963b7f787ad.ngrok-free.app/';
-        let apiUrl = 'http://192.168.0.13:8000';
+        let apiUrl = 'https://ffcbec842636.ngrok-free.app/';
         let isApiOnline = false;
         let fallbackMode = false;
         let processingQueue = [];
@@ -2260,3 +2260,4 @@
 </body>
 
 </html>
+
