--- a/index.html
+++ b/index.html
@@ -512,8 +512,8 @@
         let isListening = false;
         let lastResult = '';
         let lastSpokenInstruction = '';
-        //let apiUrl = 'https://3963b7f787ad.ngrok-free.app/';
         let apiUrl = 'https://ffcbec842636.ngrok-free.app';
+        //let apiUrl = 'http://192.168.0.13:8000';
         let isApiOnline = false;
         let fallbackMode = false;
         let processingQueue = [];
@@ -808,7 +808,8 @@
 
                     const response = await fetch(`${apiUrl}/analyze`, {
                         method: 'POST',
-                        headers: { 'Content-Type': 'application/json' },
+                        headers: { 'Content-Type': 'application/json', 'ngrok-skip-browser-warning': 'true' },
+
                         body: JSON.stringify(body),
                         signal: controller.signal
                     });
@@ -1347,7 +1348,7 @@
                     try {
                         const response = await fetch(`${apiUrl}/start-session`, {
                             method: 'POST',
-                            headers: { 'Content-Type': 'application/json' },
+                            headers: { 'Content-Type': 'application/json', 'ngrok-skip-browser-warning': 'true' },
                             body: JSON.stringify({ session_id: sessionId }),
                         });
                         if (!response.ok) {
@@ -1405,7 +1406,7 @@
                 try {
                     fetch(`${apiUrl}/stop-session`, {
                         method: 'POST',
-                        headers: { 'Content-Type': 'application/json' },
+                        headers: { 'Content-Type': 'application/json', 'ngrok-skip-browser-warning': 'true' },
                         body: JSON.stringify({ session_id: sessionId }),
                     }).catch(e => console.warn('stop-session failed:', e));
                 } catch (e) { }
@@ -1732,6 +1733,9 @@
                 const timeoutId = setTimeout(() => controller.abort(), 3000);
 
                 const response = await fetch(`${apiUrl}/health`, {
+                    headers: {
+                        'ngrok-skip-browser-warning': 'true'
+                    },
                     signal: controller.signal
                 });
 
@@ -1781,6 +1785,9 @@
                     const timeoutId = setTimeout(() => controller.abort(), 2000);
 
                     const response = await fetch(`${apiUrl}/health`, {
+                        headers: {  // 👇 add this line
+                            'ngrok-skip-browser-warning': 'true'
+                        },
                         signal: controller.signal
                     });
 
@@ -2260,5 +2267,3 @@
 </body>
 
 </html>
-
-
