--- a/index.html
+++ b/index.html
@@ -512,9 +512,9 @@
         let isListening = false;
         let lastResult = '';
         let lastSpokenInstruction = '';
-        //let apiUrl = 'https://ffcbec842636.ngrok-free.app';
+        let apiUrl = 'https://7fbd7a57093a.ngrok-free.app';
         //let apiUrl = 'http://192.168.0.13:8000';
-        let apiUrl = 'http://localhost:8080';
+        //let apiUrl = 'http://localhost:8080';
         let isApiOnline = false;
         let fallbackMode = false;
         let processingQueue = [];
